# softfloat

./: README.md  meson.build  meson_options.txt
include/: internals.h  platform.h  primitiveTypes.h  primitives.h  softfloat.h  softfloat_types.h
src/: bf16_to_f32.c  s_roundPackToBF16.c  s_roundPackToF128.c  s_roundPackToF16.c
